# systemd-sandbox-check

./: .bumpversion.toml  .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: c-build.yml  python-publish.yml  release.yml
c/: Makefile  cli.c  main.c  probe.c  ssc.h  unit_parse.c
examples/: privatetmp-noexecpaths-bug.service
src/: cli.c  main.c  probe.c  ssc.h
systemd_sandbox_check/: __init__.py  __main__.py  cli.py  probe.py
tests/: run.sh  test_cli.py
tests/sockets/: lint-maxconn.socket
tests/units/: basic.service  plus-prefix-info.service  plus-prefix-pass.service  protectproc-capfixed.service  protectproc-emptycapset.service  protectproc-no-capfix.service  repeated-execpaths.service
