[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "systemd-sandbox-check"
dynamic = ["version"]
authors = [
    {name = "Manfred Kaiser", email = "manfred.kaiser@ssh-mitm.at"}
]
description = "Dynamically verify that systemd sandboxing/hardening directives on a unit actually take effect"
readme = "README.md"
license = {text = "MIT"}
keywords = [
    "systemd",
    "security",
    "hardening",
    "sandboxing",
    "seccomp",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Topic :: Security",
    "Topic :: System :: Systems Administration",
    "Development Status :: 3 - Alpha",
]
requires-python = ">= 3.11"
dependencies = []

[project.scripts]
systemd-sandbox-check = "systemd_sandbox_check.cli:main"

[project.urls]
Homepage = "https://github.com/manfred-kaiser/systemd-sandbox-check"
Changelog = "https://github.com/manfred-kaiser/systemd-sandbox-check/blob/main/CHANGELOG.md"
Source = "https://github.com/manfred-kaiser/systemd-sandbox-check"
Tracker = "https://github.com/manfred-kaiser/systemd-sandbox-check/issues"

[tool.hatch.version]
path = "systemd_sandbox_check/__init__.py"

[tool.hatch.build]
include = [
    "systemd_sandbox_check/**/*.py",
]

[tool.hatch.envs.hatch-test]
dependencies = ["pytest"]

[tool.hatch.envs.hatch-test.scripts]
run = "pytest{env:HATCH_TEST_ARGS:} {args:tests/}"

[[tool.hatch.envs.hatch-test.matrix]]
python = ["3.11", "3.12", "3.13"]

[tool.hatch.envs.test]
dependencies = ["pytest"]

[tool.hatch.envs.test.scripts]
run = "pytest tests/"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.hatch.envs.lint]
detached = false
dependencies = [
    "bandit",
    "black~=26.0",
    "Flake8-pyproject",
    "flake8",
    "mypy",
    "pylint",
    "pytest",
    "ruff",
]

[tool.hatch.envs.lint.scripts]
check = [
    "pytest",
    "black --check systemd_sandbox_check",
    "bandit -r systemd_sandbox_check",
    "ruff check systemd_sandbox_check",
    "flake8 systemd_sandbox_check",
    "pylint systemd_sandbox_check",
    "mypy systemd_sandbox_check",
]

[[tool.hatch.envs.lint.matrix]]
python = ["3.11", "3.12", "3.13"]

[tool.flake8]
ignore = ["E203", "E501", "W503"]

[tool.mypy]
strict = true
install_types = true
non_interactive = true

[tool.pylint]
disable = [
    "line-too-long",
]

[tool.pylint.design]
max-args = 7
max-locals = 25

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D203",    # one-blank-line-before-class
    "D213",    # multi-line-summary-second-line
    "E501",    # Line too long
    "S603",    # subprocess call - checked deliberately, args are not shell-interpreted
    "T201",    # print used for CLI output by design
]

[tool.ruff.lint.pylint]
max-args = 7

[tool.black]
target-version = ["py311"]

[tool.bumpversion]
current_version = "0.1.0"

[[tool.bumpversion.files]]
filename = "systemd_sandbox_check/__init__.py"

[[tool.bumpversion.files]]
filename = "CHANGELOG.md"
search = "[Unreleased]: https://github.com/manfred-kaiser/systemd-sandbox-check/compare/{current_version}...main"
replace = """[Unreleased]: https://github.com/manfred-kaiser/systemd-sandbox-check/compare/{new_version}...main
[{new_version}]: https://github.com/manfred-kaiser/systemd-sandbox-check/compare/{current_version}...{new_version}"""

[[tool.bumpversion.files]]
filename = "CHANGELOG.md"
search = "## [Unreleased]"
replace = """## [Unreleased]

## [{new_version}] - {now:%Y-%m-%d}"""
